--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Ryan Merrill</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -76,11 +76,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="{% static 'img/profile.png' %}" alt="">
+                    {# <img class="img-responsive" src="{% static 'img/profile.png' %}" alt=""> #}
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">Ryan Merrill</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Web Developer - User Experience Designer</span>
                     </div>
                 </div>
             </div>
