--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -80,7 +80,7 @@
                     <div class="intro-text">
                         <span class="name">Ryan Merrill</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - User Experience Designer</span>
+                        <span class="skills">Django/Python Web Developer</span>
                     </div>
                 </div>
             </div>
@@ -91,12 +91,12 @@
     <section id="portfolio">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-center text-intro">
                     <h2>Portfolio</h2>
                     <hr class="star-primary">
                 </div>
             </div>
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -157,7 +157,7 @@
                         <img src="{% static 'img/portfolio/submarine.png' %}" class="img-responsive" alt="">
                     </a>
                 </div>
-            </div>
+            </div>-->
         </div>
     </section>
 
