--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -36,7 +36,7 @@
 <body id="page-top" class="index">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -55,13 +55,13 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="">
                         <a href="#portfolio">Portfolio</a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="">
                         <a href="#about">About</a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="">
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -79,7 +79,7 @@
                     {# <img class="img-responsive" src="{% static 'img/profile.png' %}" alt=""> #}
                     <div class="intro-text">
                         <span class="name">Ryan Merrill</span>
-                        <hr class="star-light">
+                        <hr class="">
                         <span class="skills">Django/Python Web Developer</span>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center text-intro">
                     <h2>Portfolio</h2>
-                    <hr class="star-primary">
+                    <hr class="">
                 </div>
             </div>
             <!--<div class="row">
@@ -167,7 +167,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-light">
+                    <hr class="">
                 </div>
             </div>
             <div class="row">
@@ -176,12 +176,12 @@
                 </div>
                 <div class="col-lg-4">
                     <p></p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
-                </div>
+                {# </div> #}
+                {# <div class="col-lg-8 col-lg-offset-2 text-center"> #}
+                    {# <a href="#" class="btn btn-lg btn-outline"> #}
+                        {# <i class="fa fa-download"></i> Download Theme #}
+                    {# </a> #}
+                {# </div> #}
             </div>
         </div>
     </section>
@@ -192,7 +192,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Contact Me</h2>
-                    <hr class="star-primary">
+                    <hr class="">
                 </div>
             </div>
             <div class="row">
@@ -209,6 +209,13 @@
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Subject</label>
+                                <input type="text" class="form-control" placeholder="Subject" id="subject">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Email Address</label>
                                 <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
                                 <p class="help-block text-danger"></p>
@@ -216,15 +223,8 @@
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <textarea rows="3" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -254,6 +254,9 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
+                                <a href="https://www.linkedin.com/in/ryancmerrill" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                            </li>
+                            <li>
                                 <a href="https://www.facebook.com/ryan.merrill.7" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
@@ -261,9 +264,6 @@
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/ryancmerrill" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/in/ryancmerrill" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -525,7 +525,7 @@
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="{% static 'js/classie.js' %}"></script>
-    <script src="{% static 'js/cbpAnimatedHeader.js' %}"></script>
+    {#<script src="{% static 'js/cbpAnimatedHeader.js' %}"></script>#}
 
     <!-- Contact Form JavaScript -->
     <script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
