--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -18,6 +18,7 @@
 
     <!-- Custom CSS -->
     <link href="{% static 'css/freelancer.css' %}" rel="stylesheet">
+    <link href="{% static 'css/landing.css' %}" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
@@ -79,7 +80,7 @@
                     {# <img class="img-responsive" src="{% static 'img/profile.png' %}" alt=""> #}
                     <div class="intro-text">
                         <span class="name">Ryan Merrill</span>
-                        <hr class="">
+                        <hr class="hr-divider">
                         <span class="skills">Django/Python Web Developer</span>
                     </div>
                 </div>
@@ -93,10 +94,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center text-intro">
                     <h2>Portfolio</h2>
-                    <hr class="">
+                    <hr class="hr-divider">
                 </div>
             </div>
-            <!--<div class="row">
+            <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -157,7 +158,7 @@
                         <img src="{% static 'img/portfolio/submarine.png' %}" class="img-responsive" alt="">
                     </a>
                 </div>
-            </div>-->
+            </div>
         </div>
     </section>
 
@@ -167,12 +168,12 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="">
+                    <hr class="hr-divider">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm a Django/Python Web Developer</p>
+                    <p>I'm a Django/Python Web Developer. I learned web development from <a href="http://codingcamp.us/courses/list/?course=3" target='blank'>Coding Campus</a></p>
                 </div>
                 <div class="col-lg-4">
                     <p></p>
@@ -192,7 +193,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Contact Me</h2>
-                    <hr class="">
+                    <hr class="hr-divider">
                 </div>
             </div>
             <div class="row">
