--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -171,13 +171,13 @@
                     <hr class="hr-divider">
                 </div>
             </div>
-            <div class="row">
+            <div class="row about-section">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm a Django/Python Web Developer. I learned web development from <a href="http://codingcamp.us/courses/list/?course=3" target='blank'>Coding Campus</a></p>
+                    <p>I'm a Django/Python Web Developer.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p></p>
-                {# </div> #}
+                    <p>I learned web development from the <a href="http://codingcamp.us/courses/list/?course=3" target='blank'>Coding Campus</a> boot camp.</p>
+                </div>
                 {# <div class="col-lg-8 col-lg-offset-2 text-center"> #}
                     {# <a href="#" class="btn btn-lg btn-outline"> #}
                         {# <i class="fa fa-download"></i> Download Theme #}
@@ -255,16 +255,16 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.linkedin.com/in/ryancmerrill" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/ryancmerrill" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-github"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.facebook.com/ryan.merrill.7" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/ryan.merrill.7" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/AzureTower" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://twitter.com/AzureTower" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/ryancmerrill" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/ryancmerrill" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
