add collect static

--- a/main/templates/response.html
+++ b/main/templates/response.html
@@ -1,2 +1,4 @@
-{{ response }}
-{{ error }}
+<p>Pull Response: {{ pull }}</p>
+<p>Pull Error: {{ pull_error }}</p>
+<p>Collect Response: {{ collect }}</p>
+<p>Collect Error: {{ collect_error }}</p>
