--- a/main/templates/response.html
+++ b/main/templates/response.html
@@ -2,3 +2,5 @@
 <p>Pull Error: {{ pull_error }}</p>
 <p>Collect Response: {{ collect }}</p>
 <p>Collect Error: {{ collect_error }}</p>
+<p>Restart Response: {{ restart }}</p>
+<p>Restart Error: {{ restart_error }}</p>
