--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -79,7 +79,7 @@
                 <div class="col-lg-12">
                     {# <img class="img-responsive" src="{% static 'img/profile.png' %}" alt=""> #}
                     <div class="intro-text">
-                        <span class="name">Ryan Merrill</span>
+                        <span class="main-title">Ryan Merrill</span>
                         <hr class="hr-divider">
                         <span class="skills">Django/Python Web Developer</span>
                     </div>
