--- a/main/static/css/freelancer.css
+++ b/main/static/css/freelancer.css
@@ -124,15 +124,15 @@ header .intro-text .skills {
 }
 
 @media(min-width:768px) {
-    .navbar-fixed-top {
+    /*.navbar-fixed-top {
         padding: 25px 0;
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
-    }
+    }*/
 
     .navbar-fixed-top .navbar-brand {
-        font-size: 2em;
+        font-size: 1.5em;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
@@ -143,7 +143,7 @@ header .intro-text .skills {
     }
 
     .navbar-fixed-top.navbar-shrink .navbar-brand {
-        font-size: 1.5em;
+        font-size: 1em;
     }
 }
 
