--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -178,11 +178,11 @@
                 <div class="col-lg-4">
                     <p>I learned web development from the <a href="http://codingcamp.us/courses/list/?course=3" target='blank'>Coding Campus</a> boot camp.</p>
                 </div>
-                {# <div class="col-lg-8 col-lg-offset-2 text-center"> #}
-                    {# <a href="#" class="btn btn-lg btn-outline"> #}
-                        {# <i class="fa fa-download"></i> Download Theme #}
-                    {# </a> #}
-                {# </div> #}
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a href="#" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Download My Resume
+                    </a>
+                </div>
             </div>
         </div>
     </section>
