--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -99,16 +99,18 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
+                    <h5>Django Message Board</h5>
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="{% static 'img/portfolio/cabin.png' %}" class="img-responsive" alt="">
+                        {# <hr class='hr-divider'> #}
+                        <img src="{% static 'img/portfolio/message_app.png' %}" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <!--<div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -117,8 +119,8 @@
                         </div>
                         <img src="{% static 'img/portfolio/cake.png' %}" class="img-responsive" alt="">
                     </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
+                </div>-->
+                <!--<div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -127,8 +129,8 @@
                         </div>
                         <img src="{% static 'img/portfolio/circus.png' %}" class="img-responsive" alt="">
                     </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
+                </div>-->
+                <!--<div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -137,8 +139,8 @@
                         </div>
                         <img src="{% static 'img/portfolio/game.png' %}" class="img-responsive" alt="">
                     </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
+                </div>-->
+                <!--<div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -147,8 +149,8 @@
                         </div>
                         <img src="{% static 'img/portfolio/safe.png' %}" class="img-responsive" alt="">
                     </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
+                </div>-->
+                <!--<div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -157,7 +159,7 @@
                         </div>
                         <img src="{% static 'img/portfolio/submarine.png' %}" class="img-responsive" alt="">
                     </a>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
@@ -306,10 +308,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-                            <img src="{% static 'img/portfolio/cabin.png' %}" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <h2>Django Message Board</h2>
+                            <hr class="hr-divider">
+                            <img src="{% static 'img/portfolio/message_app.png' %}" class="img-responsive img-centered" alt="Screen shot of Message Board front page">
+                            <p>This was my first real project written in Django. It is a single room message board that allows users to make accounts and post messages.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -324,7 +326,7 @@
                                     </strong>
                                 </li>
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            {# <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button> #}
                         </div>
                     </div>
                 </div>
