--- a/github_webhooks/templates/response.html
+++ b/github_webhooks/templates/response.html
@@ -1,5 +1,7 @@
 <p>Pull Response: {{ pull }}</p>
 <p>Pull Error: {{ pull_error }}</p>
+<p>chown Response: {{ chown }}</p>
+<p>chown Error: {{ chown_error }}</p>
 <p>Collect Response: {{ collect }}</p>
 <p>Collect Error: {{ collect_error }}</p>
 <p>Restart Response: {{ restart }}</p>
