--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -255,10 +255,10 @@
                         {# <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p> #}
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        {# <h3>Around the Web</h3> #}
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.linkedin.com/in/ryancmerrill" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-github"></i></a>
+                                <a href="https://github.com/azuretower" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-github"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.facebook.com/ryan.merrill.7" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-facebook"></i></a>
@@ -532,8 +532,8 @@
     {#<script src="{% static 'js/cbpAnimatedHeader.js' %}"></script>#}
 
     <!-- Contact Form JavaScript -->
-    // <script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
-    // <script src="{% static 'js/contact_me.js' %}"></script>
+    <script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
+    <script src="{% static 'js/contact_me.js' %}"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="{% static 'js/freelancer.js' %}"></script>
