--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -182,7 +182,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="{% static 'img/Resume.pdf' %}" class="btn btn-lg btn-outline" target='blank'>
-                        <i class="fa fa-download"></i> My Resume
+                         My R&eacute;sum&eacute;
                     </a>
                 </div>
             </div>
@@ -314,16 +314,8 @@
                             <img src="{% static 'img/portfolio/message_app.png' %}" class="img-responsive img-centered" alt="Screen shot of Message Board front page">
                             <p>This was my first real project written in Django. It is a single room message board that allows users to make accounts and post messages.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Github:
+                                    <strong><a href="https://github.com/azuretower/message_board">message_board</a>
                                     </strong>
                                 </li>
                             </ul>
