--- a/main/static/css/freelancer.css
+++ b/main/static/css/freelancer.css
@@ -82,7 +82,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
-    background: #18bc9c;
+    background: #0C888B;
 }
 
 header .container {
@@ -104,14 +104,14 @@ header .intro-text .name {
 }
 
 header .intro-text .skills {
-    font-size: 1.25em;
+    font-size: 1em;
     font-weight: 300;
 }
 
 @media(min-width:768px) {
     header .container {
         padding-top: 200px;
-        padding-bottom: 100px;
+        padding-bottom: 200px;
     }
 
     header .intro-text .name {
