--- a/main/static/css/landing.css
+++ b/main/static/css/landing.css
@@ -8,7 +8,7 @@
     text-align: center;
 }
 
-.main-title {
+header .intro-text .main-title {
     font-size: 70px;
 }
 
@@ -25,3 +25,24 @@
     border: 4px solid #2c3e50;
 }
 
+section.success {
+    background-color: #0C888B;
+}
+
+section.success .btn {
+    color: white;
+}
+
+button#contact_btn {
+    background-color: #0C888B;
+}
+
+.footer-above {
+    /*padding-bottom: 50px;*/
+}
+
+@media(max-width:768px) {
+    header .intro-text .main-title {
+        font-size: 50px;
+    }
+}
