added recipe to portfolio

--- a/main/static/css/landing.css
+++ b/main/static/css/landing.css
@@ -37,12 +37,18 @@ button#contact_btn {
     background-color: #0C888B;
 }
 
-.footer-above {
-    /*padding-bottom: 50px;*/
-}
-
 @media(max-width:768px) {
     header .intro-text .main-title {
         font-size: 50px;
+    }
+
+    .hr-divider {
+        width: 80%;
+    }
+}
+
+@media(max-width:990px) {
+    .hr-divider {
+        width: 70%;
     }
 }
