--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -110,16 +110,17 @@
                         <img src="{% static 'img/portfolio/message_app.png' %}" class="img-responsive" alt="">
                     </a>
                 </div>
-                <!--<div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 portfolio-item">
+                    <h5>Recipe Ingredient Scaler</h5>
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="{% static 'img/portfolio/cake.png' %}" class="img-responsive" alt="">
+                        <img src="{% static 'img/portfolio/recipe_main.png' %}" class="img-responsive" alt="">
                     </a>
-                </div>-->
+                </div>
                 <!--<div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -175,7 +176,7 @@
             </div>
             <div class="row about-section">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm a Django/Python Web Developer.</p>
+                    <p>I'm a Django/Python Web Developer.  I first learned programming at BYU as a CS major</p>
                 </div>
                 <div class="col-lg-4">
                     <p>I learned web development from the <a href="http://codingcamp.us/courses/list/?course=3" target='blank'>Coding Campus</a> boot camp.</p>
@@ -314,8 +315,9 @@
                             <img src="{% static 'img/portfolio/message_app.png' %}" class="img-responsive img-centered" alt="Screen shot of Message Board front page">
                             <p>This was my first real project written in Django. It is a single room message board that allows users to make accounts and post messages.</p>
                             <ul class="list-inline item-details">
-                                <li>Github:
-                                    <strong><a href="https://github.com/azuretower/message_board">message_board</a>
+                                <li>GitHub:
+                                    <strong>
+                                        <a href="https://github.com/azuretower/message_board">message_board</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -338,25 +340,19 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-                            <img src="{% static 'img/portfolio/cake.png' %}" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <h2>Recipe Ingredient Scaler</h2>
+                            <hr class="hr-divider">
+                            <img src="{% static 'img/portfolio/recipe_main.png' %}" class="img-responsive img-centered" alt="The front page, shows list of recipes">
+                            <img src="{% static 'img/portfolio/recipe_details.png' %}" class="img-responsive img-centered" alt="details page, allows scaling of ingredients">
+                            <p>This project allows users to store recipes and search through them based on several key points, the most interesting is searching by ingredients. You can enter a commna seperated list of ingredents and it will return the recipes that have those ingredients, sorted based on how many matches there were.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>GitHub:
+                                    <strong>
+                                        <a href="https://github.com/thejqs/recipes">recipes</a>
                                     </strong>
                                 </li>
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            {# <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button> #}
                         </div>
                     </div>
                 </div>
