--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -8,8 +8,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Landing page for Ryan Merrill">
+    <meta name="author" content="Ryan Merrill">
 
     <title>Ryan Merrill</title>
 
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Ryan Merrill</a>
+                <a class="navbar-brand" href="#page-top">&lt;RM&gt; Ryan Merrill</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,13 +56,13 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="">
+                    <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
-                    <li class="">
+                    <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
-                    <li class="">
+                    <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -98,8 +98,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <h5>Django Message Board</h5>
+                <div class="col-sm-6 portfolio-item">
+                    <h5>Django&nbsp;Message&nbsp;Board</h5>
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -110,8 +110,8 @@
                         <img src="{% static 'img/portfolio/message_app.png' %}" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <h5>Recipe Ingredient Scaler</h5>
+                <div class="col-sm-6 portfolio-item">
+                    <h5>Recipe&nbsp;Ingredient&nbsp;Scaler</h5>
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -121,7 +121,7 @@
                         <img src="{% static 'img/portfolio/recipe_main.png' %}" class="img-responsive" alt="">
                     </a>
                 </div>
-                <!--<div class="col-sm-4 portfolio-item">
+                <!--<div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -131,7 +131,7 @@
                         <img src="{% static 'img/portfolio/circus.png' %}" class="img-responsive" alt="">
                     </a>
                 </div>-->
-                <!--<div class="col-sm-4 portfolio-item">
+                <!--<div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -141,7 +141,7 @@
                         <img src="{% static 'img/portfolio/game.png' %}" class="img-responsive" alt="">
                     </a>
                 </div>-->
-                <!--<div class="col-sm-4 portfolio-item">
+                <!--<div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -151,7 +151,7 @@
                         <img src="{% static 'img/portfolio/safe.png' %}" class="img-responsive" alt="">
                     </a>
                 </div>-->
-                <!--<div class="col-sm-4 portfolio-item">
+                <!--<div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -183,7 +183,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="{% static 'img/Resume.pdf' %}" class="btn btn-lg btn-outline" target='blank'>
-                         My R&eacute;sum&eacute;
+                         My R&acutee;sum&eacute;
                     </a>
                 </div>
             </div>
@@ -373,7 +373,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="{% static 'img/portfolio/circus.png' %}" class="img-responsive img-centered" alt="">
+                            {# <img src="{% static 'img/portfolio/circus.png' %}" class="img-responsive img-centered" alt=""> #}
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -410,7 +410,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="{% static 'img/portfolio/game.png' %}" class="img-responsive img-centered" alt="">
+                            {# <img src="{% static 'img/portfolio/game.png' %}" class="img-responsive img-centered" alt=""> #}
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -447,7 +447,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="{% static 'img/portfolio/safe.png' %}" class="img-responsive img-centered" alt="">
+                            {# <img src="{% static 'img/portfolio/safe.png' %}" class="img-responsive img-centered" alt=""> #}
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -484,7 +484,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="{% static 'img/portfolio/submarine.png' %}" class="img-responsive img-centered" alt="">
+                            {# <img src="{% static 'img/portfolio/submarine.png' %}" class="img-responsive img-centered" alt=""> #}
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
