--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -183,7 +183,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="{% static 'img/Resume.pdf' %}" class="btn btn-lg btn-outline" target='blank'>
-                         My R&acutee;sum&eacute;
+                         My R&eacute;sum&eacute;
                     </a>
                 </div>
             </div>
