fixed send button border

--- a/main/static/css/landing.css
+++ b/main/static/css/landing.css
@@ -35,6 +35,7 @@ section.success .btn {
 
 button#contact_btn {
     background-color: #0C888B;
+    border-color: #11866f;
 }
 
 #portfolio .portfolio-item .portfolio-link {
