--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -47,7 +47,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">&lt;RM&gt; Ryan Merrill</a>
+                <a class="navbar-brand" href="#page-top">
+                    &lt;RM&gt; Ryan Merrill &lt;/RM&gt;
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -183,8 +185,9 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="{% static 'img/Resume.pdf' %}" class="btn btn-lg btn-outline" target='blank'>
-                         My R&eacute;sum&eacute;
+                         Checkout My Resume
                     </a>
+                    {# &eacute; #}
                 </div>
             </div>
         </div>
