added live message_board link

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -110,6 +110,7 @@
                         </div>
                         {# <hr class='hr-divider'> #}
                         <img src="{% static 'img/portfolio/message_app.png' %}" class="img-responsive" alt="">
+                        <a href="https://message.ryanmerrill.me">Live Version</a>
                     </a>
                 </div>
                 <div class="col-sm-6 portfolio-item">
@@ -321,6 +322,11 @@
                                 <li>GitHub:
                                     <strong>
                                         <a href="https://github.com/azuretower/message_board">message_board</a>
+                                    </strong>
+                                </li>
+                                <li>Live Version:
+                                    <strong>
+                                        <a href="https://message.ryanmerrill.me">message.ryanmerrill.me</a>
                                     </strong>
                                 </li>
                             </ul>
