--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -100,8 +100,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 portfolio-item">
-                    <h5>Django&nbsp;Message&nbsp;Board</h5>
+                <div class="col-sm-12 col-md-6 portfolio-item">
+                    <h3>Django&nbsp;Message&nbsp;Board</h3>
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -110,11 +110,11 @@
                         </div>
                         {# <hr class='hr-divider'> #}
                         <img src="{% static 'img/portfolio/message_app.png' %}" class="img-responsive" alt="">
-                        <a href="https://message.ryanmerrill.me">Live Version</a>
                     </a>
+                    <h4><a class='live-links' href="http://message.ryanmerrill.me" target='blank'>Live Version</a></h4>
                 </div>
-                <div class="col-sm-6 portfolio-item">
-                    <h5>Recipe&nbsp;Ingredient&nbsp;Scaler</h5>
+                <div class="col-sm-12 col-md-6 portfolio-item">
+                    <h3>Recipe&nbsp;Ingredient&nbsp;Scaler</h3>
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -123,6 +123,7 @@
                         </div>
                         <img src="{% static 'img/portfolio/recipe_main.png' %}" class="img-responsive" alt="">
                     </a>
+                    {# <h4><a class='live-links' href="#">Live Version</a></h4> #}
                 </div>
                 <!--<div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
@@ -326,7 +327,7 @@
                                 </li>
                                 <li>Live Version:
                                     <strong>
-                                        <a href="https://message.ryanmerrill.me">message.ryanmerrill.me</a>
+                                        <a href="http://message.ryanmerrill.me">message.ryanmerrill.me</a>
                                     </strong>
                                 </li>
                             </ul>
