added live link to recipe

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -123,7 +123,7 @@
                         </div>
                         <img src="{% static 'img/portfolio/recipe_main.png' %}" class="img-responsive" alt="">
                     </a>
-                    {# <h4><a class='live-links' href="#">Live Version</a></h4> #}
+                    <h4><a class='live-links' href="http://recipe.ryanmerrill.me" target='blank'>Live Version</a></h4>
                 </div>
                 <!--<div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
