--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -361,6 +361,11 @@
                                         <a href="https://github.com/thejqs/recipes">recipes</a>
                                     </strong>
                                 </li>
+                                <li>Live Version:
+                                    <strong>
+                                        <a href="http://recipe.ryanmerrill.me">recipe.ryanmerrill.me</a>
+                                    </strong>
+                                </li>
                             </ul>
                             {# <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button> #}
                         </div>
