--- a/main/templates/404.html
+++ b/main/templates/404.html
@@ -1,1 +1,29 @@
-<h1>Custom 404 Message</h1>
+{% extends  'base.html' %}
+
+{% load staticfiles %}
+
+{% block css %}
+    <link href="{% static 'css/404-page.css' %}" rel="stylesheet">
+{% endblock css %}
+
+{% block content %}
+
+    <div class="container" id='style-404'>
+        <div class="row">
+            <h1 id='error-text'>404-Page Not Found</h1>
+            <h3>Enjoy</h3>
+        </div>
+    </div>
+    <div style="position:relative;width:267px;height:25px;overflow:hidden;">
+      <div style="position:absolute;top:-276px;left:-5px">
+        <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/qV0LHCHf-pE?autoplay=1">
+        </iframe>
+      </div>
+    </div>
+    
+{% endblock content %}
+
+{% block js %}
+    <script src="{% static 'js/404-page.js' %}"></script>
+{% endblock js %}
