--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,299 +1,23 @@
+{% extends  'base.html' %}
+
 {% load staticfiles %}
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Landing page for Ryan Merrill">
-    <meta name="author" content="Ryan Merrill">
-
-    <title>Ryan Merrill</title>
-
-    <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="{% static 'css/freelancer.css' %}" rel="stylesheet">
-    <link href="{% static 'css/landing.css' %}" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body id="page-top" class="index">
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#page-top">
-                    &lt;RM&gt; Ryan Merrill &lt;/RM&gt;
-                </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#about">About</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
+{% block content %}
 
     <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    {# <img class="img-responsive" src="{% static 'img/profile.png' %}" alt=""> #}
-                    <div class="intro-text">
-                        <span class="main-title">Ryan Merrill</span>
-                        <hr class="hr-divider">
-                        <span class="skills">Django/Python Web Developer</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+    {% include 'header.html' %}
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center text-intro">
-                    <h2>Portfolio</h2>
-                    <hr class="hr-divider">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-6 portfolio-item">
-                    <h3>Django&nbsp;Message&nbsp;Board</h3>
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        {# <hr class='hr-divider'> #}
-                        <img src="{% static 'img/portfolio/message_app.png' %}" class="img-responsive" alt="">
-                    </a>
-                    <h4><a class='live-links' href="http://message.ryanmerrill.me" target='blank'>Live Version</a></h4>
-                </div>
-                <div class="col-sm-12 col-md-6 portfolio-item">
-                    <h3>Recipe&nbsp;Ingredient&nbsp;Scaler</h3>
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="{% static 'img/portfolio/recipe_main.png' %}" class="img-responsive" alt="">
-                    </a>
-                    <h4><a class='live-links' href="http://recipe.ryanmerrill.me" target='blank'>Live Version</a></h4>
-                </div>
-                <!--<div class="col-sm-6 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="{% static 'img/portfolio/circus.png' %}" class="img-responsive" alt="">
-                    </a>
-                </div>-->
-                <!--<div class="col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="{% static 'img/portfolio/game.png' %}" class="img-responsive" alt="">
-                    </a>
-                </div>-->
-                <!--<div class="col-sm-6 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="{% static 'img/portfolio/safe.png' %}" class="img-responsive" alt="">
-                    </a>
-                </div>-->
-                <!--<div class="col-sm-6 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="{% static 'img/portfolio/submarine.png' %}" class="img-responsive" alt="">
-                    </a>
-                </div>-->
-            </div>
-        </div>
-    </section>
+    {% include 'portfolio.html' %}
 
     <!-- About Section -->
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="hr-divider">
-                </div>
-            </div>
-            <div class="row about-section">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm a Django/Python Web Developer.  I first learned programming at BYU as a CS major</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>I learned web development from the <a href="http://codingcamp.us/courses/list/?course=3" target='blank'>Coding Campus</a> boot camp.</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="{% static 'img/Resume.pdf' %}" class="btn btn-lg btn-outline" target='blank'>
-                         Checkout My Resume
-                    </a>
-                    {# &eacute; #}
-                </div>
-            </div>
-        </div>
-    </section>
+    {% include 'about.html' %}
 
     <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
-                    <hr class="hr-divider">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        {% csrf_token %}
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" name='name' required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" name='email' required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Subject</label>
-                                <input type="text" class="form-control" placeholder="Subject" id="subject" name='subject'>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Message</label>
-                                <textarea rows="3" class="form-control" placeholder="Message" id="message" name='message' required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type='submit' class="btn btn-success btn-lg" id='contact_btn'>Send</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
+    {% include 'contact.html' %}
 
     <!-- Footer -->
-    <footer class="text-center">
-        <div class="footer-above">
-            <div class="container">
-                <div class="row">
-                    <div class="footer-col col-md-4">
-                        {# <h3>Location</h3> #}
-                        {# <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p> #}
-                    </div>
-                    <div class="footer-col col-md-4">
-                        {# <h3>Around the Web</h3> #}
-                        <ul class="list-inline">
-                            <li>
-                                <a href="https://github.com/azuretower" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-github"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.facebook.com/ryan.merrill.7" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://twitter.com/AzureTower" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/in/ryancmerrill" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        {# <h3>About Freelancer</h3> #}
-                        {# <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p> #}
-                    </div>
-                </div>
-            </div>
-        </div>
-        {# <div class="footer-below"> #}
-            {# <div class="container"> #}
-                {# <div class="row"> #}
-                    {# <div class="col-lg-12"> #}
-                        {# Copyright &copy; Your Website 2014 #}
-                    {# </div> #}
-                {# </div> #}
-            {# </div> #}
-        {# </div> #}
-    </footer>
+    
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll visible-xs visible-sm">
@@ -523,24 +247,4 @@
         </div>
     </div>
 
-    <!-- jQuery -->
-    <script src="{% static 'js/jquery.js' %}"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="{% static 'js/classie.js' %}"></script>
-    {#<script src="{% static 'js/cbpAnimatedHeader.js' %}"></script>#}
-
-    <!-- Contact Form JavaScript -->
-    <script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
-    <script src="{% static 'js/contact_me.js' %}"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="{% static 'js/freelancer.js' %}"></script>
-
-</body>
-
-</html>
+{% endblock content %}
