added sending message to contact section

--- a/main/static/css/landing.css
+++ b/main/static/css/landing.css
@@ -26,6 +26,10 @@ html { /* sticks the footer to the bottom */
     text-align: center;
 }
 
+.about-sidebar {
+    
+}
+
 header .intro-text .main-title {
     font-size: 70px;
 }
