--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -10,7 +10,7 @@
         </div>
         <div class="row about-section">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>I'm a Django/Python Web Developer.  I first learned programming at BYU as a CS major</p>
+                <p>I'm a Django/Python Web Developer.  I first learned programming at BYU as a CS major.</p>
             </div>
             <div class="col-lg-4">
                 <p>I learned web development from the <a href="http://codingcamp.us/courses/list/?course=3" target='blank'>Coding Campus</a> boot camp.</p>
