--- a/main/templates/header.html
+++ b/main/templates/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-12">
                 {# <img class="img-responsive" src="{% static 'img/profile.png' %}" alt=""> #}
                 <div class="intro-text">
                     <span class="main-title">Ryan Merrill</span>
