--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -17,7 +17,7 @@
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <a href="{% static 'img/Resume.pdf' %}" class="btn btn-lg btn-outline" target='blank'>
-                     Checkout My Resume
+                     Check Out My Resume
                 </a>
                 {# &eacute; #}
             </div>
