--- a/project/templates/footer.html
+++ b/project/templates/footer.html
@@ -4,11 +4,11 @@
     <div class="footer-above">
         <div class="container">
             <div class="row">
-                <div class="footer-col col-md-4">
+                <div class="footer-col col-md-3">
                     {# <h3>Location</h3> #}
                     {# <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p> #}
                 </div>
-                <div class="footer-col col-md-4">
+                <div class="footer-col col-md-6">
                     {# <h3>Around the Web</h3> #}
                     <ul class="list-inline">
                         <li>
@@ -18,6 +18,9 @@
                             <a href="https://www.facebook.com/ryan.merrill.7" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-facebook"></i></a>
                         </li>
                         <li>
+                            <a href="mailto:ryan.merrill215@gmail.com" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
+                        </li>
+                        <li>
                             <a href="https://twitter.com/AzureTower" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-twitter"></i></a>
                         </li>
                         <li>
@@ -25,7 +28,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer-col col-md-4">
+                <div class="footer-col col-md-3">
                     {# <h3>About Freelancer</h3> #}
                     {# <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p> #}
                 </div>
