--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -32,6 +32,14 @@
         <!-- Navigation -->
         {% include 'navbar.html' %}
 
+        {% if user.is_authenticated %}
+            <div class="logged-in">
+                <a class="btn btn-primary" href="{% url 'logout' %}">
+                    Acting As: {{ user.username|title }}
+                </a>
+            </div>
+        {% endif %}
+
         {% block content %}
         {% endblock content %}
 
@@ -47,10 +55,6 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
         <script src="{% static 'js/classie.js' %}"></script>
         {#<script src="{% static 'js/cbpAnimatedHeader.js' %}"></script>#}
-
-        <!-- Contact Form JavaScript -->
-        <script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
-        <script src="{% static 'js/contact_me.js' %}"></script>
 
         <!-- Custom Theme JavaScript -->
         <script src="{% static 'js/freelancer.js' %}"></script>
