added button animation for acting as

--- a/blog/templates/front.html
+++ b/blog/templates/front.html
@@ -10,9 +10,11 @@
 
     <div class="container blog-front top-space">
         <div class="row">
-            <h1>Azure Tower</h1>
-            <h6>On the internet, people have different names.</h6>
-            <h6>Mine is Azure</h6>
+            <div class="col-xs-12">
+                <h1>Azure Tower</h1>
+                <h6>On the internet, people have different names.</h6>
+                <h6>Mine is Azure</h6>
+            </div>
         </div>
     </div>
 
