added social network drawer

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -4,6 +4,29 @@
 
 {% block content %}
 
+    <div id='social-badge' class="closed">
+        <button id='social-badge-button' class="btn btn-primary">
+            Stalk Me
+        </button>
+        <ul style='list-style-type:none'>
+            <li>
+                <a href="https://github.com/azuretower" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-github"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/ryan.merrill.7" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="mailto:ryan.merrill215@gmail.com" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/AzureTower" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/ryancmerrill" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-linkedin"></i></a>
+            </li>
+        </ul>
+    </div>
+
     <!-- Header -->
     {% include 'header.html' %}
 
