--- a/main/static/css/landing.css
+++ b/main/static/css/landing.css
@@ -118,7 +118,63 @@ body {
     }
 }
 
+#social-badge {
+    z-index: 1000;
+    position: fixed;
+    top: 100px;
+    right: 44px;
+    -webkit-transform: rotate(-90deg);
+    -webkit-transform-origin: top right;
+    background-color: rgba(0,0,0,0.65);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
 
+.social-in {
+    -webkit-animation-name: social-in;
+    -webkit-animation-duration: .8s;
+    /*animation-delay: 2s;*/
+    -webkit-animation-iteration-count: 1;
+    /*animation-timing-function: linear;*/
+    -webkit-animation-fill-mode: forwards;
+}
+
+.social-out {
+    -webkit-animation-name: social-out;
+    -webkit-animation-duration: .8s;
+    /*animation-delay: 1s;*/
+    -webkit-animation-iteration-count: 1;
+    /*animation-timing-function: linear;*/
+    -webkit-animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes social-out {
+    0% {
+        right: 44px;
+    }
+    100% {
+        /*top: 63px;*/
+        right:378px;
+    }
+}
+
+@-webkit-keyframes social-in {
+    0% {
+        right: 378px;
+    }
+    100% {
+        /*top: 63px;*/
+        right:44px;
+    }
+}
+
+#social-badge li a {
+    -webkit-transform: rotate(90deg);
+}
+
+#social-badge ul {
+    padding-left: 20px;
+}
 
 footer {
     /* settings for the position of the footer */
@@ -208,46 +264,6 @@ button#contact_btn:focus {
 
 .blog-link {
     float: right;
-}
-
-/*.intro-text {
-    animation-name: intro;
-    animation-duration: .3s;
-    animation-delay: 3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-}*/
-
-@keyframes intro {
-    0% {
-        -ms-transform: rotate(0deg);
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-
-    25% {
-        -ms-transform: rotate(90deg);
-        -webkit-transform: rotate(90deg);
-        transform: rotate(90deg);
-    }
-
-    50% {
-        -ms-transform: rotate(180deg);
-        -webkit-transform: rotate(180deg);
-        transform: rotate(180deg);
-    }
-
-    75% {
-        -ms-transform: rotate(270deg);
-        -webkit-transform: rotate(270deg);
-        transform: rotate(270deg);
-    }
-
-    100% {
-        -ms-transform: rotate(360deg);
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
 }
 
 @media(max-width:768px) {
