--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -9,19 +9,19 @@
             Stalk Me
         </button>
         <ul style='list-style-type:none'>
-            <li>
+            <li id='github-link'>
                 <a href="https://github.com/azuretower" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-github"></i></a>
             </li>
-            <li>
+            <li id='facebook-link'>
                 <a href="https://www.facebook.com/ryan.merrill.7" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-facebook"></i></a>
             </li>
-            <li>
+            <li id='email-link'>
                 <a href="mailto:ryan.merrill215@gmail.com" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
             </li>
-            <li>
+            <li id='twitter-link'>
                 <a href="https://twitter.com/AzureTower" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-twitter"></i></a>
             </li>
-            <li>
+            <li id='linkedin-link'>
                 <a href="https://www.linkedin.com/in/ryancmerrill" class="btn-social btn-outline" target='blank'><i class="fa fa-fw fa-linkedin"></i></a>
             </li>
         </ul>
